Bug 452564 - can't create accessibles for table children when visibility style of table is changed, r=ginn.chen, sr=roc